src/test/ui/resolve/issue-3907.stderr
error[E0404]: expected trait, found type alias `Foo`
  --> $DIR/issue-3907.rs:20:6
   |
20 | impl Foo for S { //~ ERROR expected trait, found type alias `Foo`
   |      ^^^ type aliases cannot be used for traits
   |
   = help: possible better candidate is found in another module, you can import it into scope:
             `use issue_3907::Foo;`

error: cannot continue compilation due to previous error

